# Sky

./: .gitignore  .rustfmt.toml  Cargo.toml  NOTES.md  README.md
app/: Cargo.toml
app/src/: app.rs  main.rs
app/src/components/: icons.rs  mod.rs
app/src/components/header/: area.rs  controls.rs  mod.rs  title.rs  url_bar.rs  user_avatar.rs
app/src/components/main/: area.rs  content.rs
app/src/components/nav/: area.rs  mod.rs
app/src/state/: mod.rs  pages.rs  theme.rs  title.rs
app/src/styles/: colors.rs  mod.rs  variables.rs
app/src/styles/classes/align/: gap.rs
apps/sky/: Cargo.toml
apps/sky/src/: app.rs  main.rs
libs/crates/sky-floem/: Cargo.toml
libs/crates/sky-floem/src/: lib.rs
libs/crates/sky-floem/src/extension/: scrollable.rs
libs/crates/sky-html/: Cargo.toml
libs/crates/sky-html/src/: lib.rs
libs/crates/sky-html/src/lexical/: error.rs  lexeme.rs  mod.rs  token.rs  tokenizer.rs
libs/crates/sky-html/src/syntax/: error.rs  mod.rs  parser.rs
libs/crates/sky-lang/: Cargo.toml
libs/crates/sky-lang/src/: codepoint.rs  lib.rs  location.rs
libs/crates/sky-lang/src/stream/: input.rs  mod.rs
libs/crates/sky-ui/: Cargo.toml
libs/crates/sky-ui-floem/: Cargo.toml
libs/crates/sky-ui-floem/src/: app.rs  classes.rs  colors.rs  icons.rs  lib.rs  state.rs  window.rs
libs/crates/sky-ui-floem/src/content/: area.rs  content.rs  mod.rs
libs/crates/sky-ui-floem/src/header/: area.rs  controls.rs  title.rs  url_bar.rs  user_avatar.rs
libs/crates/sky-ui-floem/src/nav/: area.rs
libs/crates/sky-ui-floem/src/state/: pages.rs  theme.rs
libs/crates/sky-ui/src/: app.rs  lib.rs  settings.rs
pages/: blank.html  counter.html  font.html  heading.html
(+3 files in other folders)
