[workspace]
members = ["app", "libs/crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sky-floem = { path = "libs/crates/sky-floem" }
sky-html = { path = "libs/crates/sky-html" }
sky-ui = { path = "libs/crates/sky-ui" }

floem = { git = "https://github.com/SerialForker/floem.git", rev = "7a52781d6fbe2de7a1219143d6e1c40b1adf7c46" }
thiserror = "1.0.59"
