[package]
name = "sky"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sky-html = { workspace= true }
sky-ui = { workspace = true }

floem = { git = "https://github.com/SerialForker/floem.git", rev = "8f5a9c5c2bee1bb0355c7a058b6e39be42878534" }

paste = { version = "1.0.14" }
reqwest = { version = "0.12.4", features = ["blocking"] }
thiserror = { workspace = true }
url = "2.5.0"
