[package]
name = "sky"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sky-html = { workspace= true }
sky-ui = { workspace = true }

floem = { git = "https://github.com/SerialForker/floem.git", rev = "7a52781d6fbe2de7a1219143d6e1c40b1adf7c46" }

paste = { version = "1.0.14" }
reqwest = { version = "0.12.4", features = ["blocking"] }
thiserror = { workspace = true }
url = "2.5.0"
