[package]
name = "sky"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sky-floem = { workspace = true }
sky-html = { workspace= true }
sky-ui = { workspace = true }

paste = { version = "1.0.14" }
reqwest = { version = "0.12.4", features = ["blocking"] }
thiserror = { workspace = true }
url = "2.5.0"
